--- a/templates/index.html
+++ b/templates/index.html
@@ -7,3 +7,8 @@
   <a href="/login"><button>Log in with Spotify</button></a>
 </body>
 </html>
+<h1>Welcome to The SpotifyBook</h1>
+<form action="/new-session" method="get">
+    <button type="submit">Start New Session</button>
+</form>
+<p>Or paste your invite link from a friend to join their session.</p>
