small name changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <title>SpotifyBook</title>
 </head>
 <body>
-  <h1>Welcome to SpotifyBook</h1>
+  <h1>Welcome to The SpotifyBook</h1>
 
   <a href="/solo">
     <button>🎧 Just Me – My Top Tracks</button>
