--- a/templates/choose_range.html
+++ b/templates/choose_range.html
@@ -5,9 +5,9 @@
   <h1>Select Time Range for Top Tracks</h1>
   <form action="/top-tracks" method="post">
     <select name="time_range">
-      <option value="short_term">Past 4 Weeks</option>
-      <option value="medium_term">Past 6 Months</option>
-      <option value="long_term">All Time</option>
+      <option value="Past 4 Weeks">Past 4 Weeks</option>
+      <option value="Past 6 Months">Past 6 Months</option>
+      <option value="All Time">All Time</option>
     </select>
     <br><br>
     <button type="submit">See My Top Tracks</button>
