--- a/templates/choose_range.html
+++ b/templates/choose_range.html
@@ -4,13 +4,19 @@
 <body>
   <h1>Select Time Range for Top Tracks</h1>
   <form action="/top-tracks" method="post">
-    <select name="time_range">
-      <option value="Past 4 Weeks">Past 4 Weeks</option>
-      <option value="Past 6 Months">Past 6 Months</option>
-      <option value="All Time">All Time</option>
-    </select>
-    <br><br>
-    <button type="submit">See My Top Tracks</button>
+  <label for="time_range">Choose time range:</label>
+  <select name="time_range" id="time_range">
+    <option value="short_term" {% if time_range == "short_term" %}selected{% endif %}>
+      Past 4 Weeks
+    </option>
+    <option value="medium_term" {% if time_range == "medium_term" %}selected{% endif %}>
+      Last 6 Months
+    </option>
+    <option value="long_term" {% if time_range == "long_term" %}selected{% endif %}>
+      All Time
+    </option>
+  </select>
+  <button type="submit">Refresh Tracks</button>
   </form>
 </body>
 </html>
