--- a/templates/top_tracks.html
+++ b/templates/top_tracks.html
@@ -13,7 +13,7 @@
       <label for="time_range">Choose time range:</label>
       <select name="time_range" id="time_range">
         <option value="short_term" {% if time_range == "short_term" %}selected{% endif %}>Past 4 Weeks</option>
-        <option value="medium_term" {% if time_range == "medium_term" %}selected{% endif %}>Last 6 Months</option>
+        <option value="medium_term" {% if time_range == "medium_term" %}selected{% endif %}>Past 6 Months</option>
         <option value="long_term" {% if time_range == "long_term" %}selected{% endif %}>All Time</option>
       </select>
       <button type="submit">Refresh Tracks</button>
