--- a/templates/top_tracks.html
+++ b/templates/top_tracks.html
@@ -22,6 +22,12 @@
         <option value="medium_term" {% if time_range == "medium_term" %}selected{% endif %}>Past 6 Months</option>
         <option value="long_term" {% if time_range == "long_term" %}selected{% endif %}>All Time</option>
       </select>
+
+      <br><br>
+      <label for="limit">Number of Tracks (1–50):</label>
+      <input type="number" id="limit" name="limit" min="1" max="50" value="20">
+
+      <br><br>
       <button type="submit">Refresh Tracks</button>
     </form>
   {% endif %}
