song count fix hope

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <h1>Welcome to The SpotifyBook</h1>
 
   <a href="/solo">
-    <button>🎧 Just Me – My Top Tracks</button>
+    <button>🎧 My Top Tracks</button>
   </a>
 </body>
 </html>
