--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,16 @@
 <body>
   <h1>Welcome to The SpotifyBook</h1>
 
+  <div>
+    <h2>WARNING!</h2>
+    <p>You must send ryanchan339@gmail.com your email to be added to the users of this app <br>
+      in order to access the features that require Spotify login (this is a requirement of Spotify, not my choice).</p>
+  </div>
+
   <a href="/solo">
     <button>🎧 My Top Tracks</button>
   </a>
+
+  
 </body>
 </html>
