--- a/templates/top_tracks.html
+++ b/templates/top_tracks.html
@@ -114,4 +114,24 @@
             <div class="no-preview">No preview</div>
           {% endif %}
           <br>
-          <a class="spotify-link" href="https://open.spotify.com/track/{{ track.uri.s
+          <a class="spotify-link" href="https://open.spotify.com/track/{{ track.uri.split(':')[-1] }}" target="_blank">
+            🔗 Open in Spotify
+          </a>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+
+  <form action="/create-playlist" method="post">
+    <br>
+    <label for="playlist_name">Playlist Name:</label><br>
+    <input type="text" id="playlist_name" name="playlist_name"
+           placeholder="My Top Tracks Playlist" required>
+    <br><br>
+    <button type="submit">Create Playlist</button>
+  </form>
+
+  <br>
+  <a href="/"><button type="button">⬅ Back to Home</button></a>
+</body>
+</html>
