top artists addition big change

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
       in order to access the features that require Spotify login (this is a requirement of Spotify, not my choice).</p>
   </div>
 
-  <a href="/solo">
-    <button>🎧 My Top Tracks</button>
+  <a href="/login">
+    <button>🔐 Log In with Spotify</button>
   </a>
 
   
