--- a/templates/top_tracks.html
+++ b/templates/top_tracks.html
@@ -60,6 +60,13 @@
     <button onclick="loadTracks('long_term')">All Time</button>
   </div>
 
+  <form action="/create-playlist" method="post" style="margin-top: 30px;">
+    <label for="playlist_name">Playlist Name:</label><br>
+    <input type="text" id="playlist_name" name="playlist_name" placeholder="My Top Tracks Playlist" required>
+    <br><br>
+    <button type="submit">🎶 Create Playlist</button>
+  </form>
+
   <div id="track-container" class="track-list"></div>
 
   <script>
