attempt to combine things js wise

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
   <div>
     <h2>WARNING!</h2>
     <p>You must send ryanchan339@gmail.com your email to be added to the users of this app <br>
-      in order to access the features that require Spotify login (this is a requirement of Spotify, not my choice).</p>
+      in order to access the features that require Spotify login (this is a requirement of Spotify, not my choice). <br>
+      reminder to add demo when finished</p>
   </div>
 
   <a href="/login">
