quick search tweak

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,12 @@
       in order to access the features that require Spotify login (this is a requirement of Spotify, not my choice). <br>
       reminder to add demo when finished</p>
   </div>
-  <a href="/new-page">
-    <button>🧪 Explore New Page</button>
+  <a href="/search">
+    <button>Spotify Search Bar</button>
   </a>
   
   <a href="/login">
-    <button>🔐 Log In with Spotify</button>
+    <button>Log In with Spotify</button>
   </a>
 
   
