title small changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SpotifyBook</title>
+  <title>The SpotifyBook</title>
 </head>
 <body>
   <h1>Welcome to The SpotifyBook</h1>
