--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Spotify Search</title>
+  <title>Spotify Search Bar</title>
   <style>
     input {
       width: 300px;
@@ -37,7 +37,7 @@
   </style>
 </head>
 <body>
-  <h1>🔍 Search Spotify (No Login Required)</h1>
+  <h1>Spotify Search Bar</h1>
   <input type="text" id="search" placeholder="Search for a track or artist">
   <div id="results"></div>
 
