--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
 
   <div>
     <h2>WARNING!</h2>
-    <p>You must send ryanchan339@gmail.com your email to be added to the users of this app <br>
-      in order to access the features that require Spotify login (this is a requirement of Spotify, not my choice). <br>
-      reminder to add demo when finished</p>
+    <p>In order to access the features that require Spotify login,  <br>
+       you must send ryanchan339@gmail.com your email to be added to the users of this app(this is required by Spotify). <br>
+    </p>
   </div>
   <a href="/search">
     <button>Spotify Search Bar</button>
