small changes and learning

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <h2>WARNING!</h2>
     <p>In order to access the features that require Spotify login,  <br>
        you must send ryanchan339@gmail.com your email to be added to the users of this app(this is required by Spotify). <br>
+       Search bar does not require anything.
     </p>
   </div>
   <a href="/search">
